default-configs/asm-ingress-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asm-ingress-gateway-xlb
  namespace: asm-gateways
  # annotations:
  #   configmanagement.gke.io/cluster-selector: selector-prod
spec:
  type: ClusterIP
  selector:
    asm: asm-ingress-gateway-xlb
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021x
  - name: http
    port: 80
    targetPort: 8080
    appProtocol: HTTP
  - name: https
    port: 443
    targetPort: 8443
    appProtocol: HTTP2
