default-configs/asm-ingress-gateway/public-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: asm-ingress-gateway-xlb
  namespace: asm-gateways
  # annotations:
  #   configmanagement.gke.io/cluster-selector: selector-prod
spec:
  selector:
    asm: asm-ingress-gateway-xlb # use ASM external ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - '*' # IMPORTANT: Must use wildcard here when using SSL, see note below
    tls:
      mode: SIMPLE
      serverCertificate: "/var/secrets/edge2mesh-credential.crt"
      privateKey: "/var/secrets/edge2mesh-credential.key"
    volumeMounts:
      - mountPath: "/var/secrets"
        name: certs
volumes:
  - name: cert
    csi:
      driver: secrets-store-gke.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: asm-gateway-ss-cert
